<resources>
    <string name="chi_usa">Chi sta usando l\'applicazione?</string>
    <string name="ristoratore">Ristoratore</string>
    <string name="visualizza_menu">Visualizza menu</string>
    <string name="modifica_menu">Modifica menu</string>
    <string name="visualizza_comande">Visualizza comande</string>
    <string name="aggiungi_piatto">Aggiungi piatto</string>
    <string name="rimuovi_piatto">Rimuovi piatto</string>
    <string name="inserisci_i_dati_del_piatto">Inserisci i dati del piatto</string>
    <string name="salva">Salva</string>
    <string name="telefono">Telefono:</string>
    <string name="ordina">Ordina</string>
    <string name="inserisci_i_tuoi_dati">Inserisci i tuoi dati</string>
    <string name="cognome">Cognome</string>
    <string name="ora_consegna">Ora Consegna: OO:MM</string>
    <string name="termina_ordine">Termina ordine</string>
    <string name="numero_carta">Numero Carta</string>
    <string name="_0000_0000_0000_0000" translatable="false">0000 0000 0000 0000</string>
    <string name="scadenza_carta">Scadenza Carta</string>
    <string name="mm_aaaa">mm/AAAA</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="n_cvv" translatable="false">000</string>
    <string name="paga">paga</string>
    <string name="il_pagamento_andato_a_buon_fine">il pagamento è andato a buon fine</string>
    <string name="grazie_per_averci_scelto">Grazie per averci scelto</string>
    <string name="a_dopo">a dopo</string>
    <string name="riepilogo_ordine">Riepilogo ordine</string>
    <string name="paga_ora">Paga ora</string>
    <string name="paga_alla_consegna">Paga alla consegna</string>
    <string name="cliente">Cliente</string>
    <string name="tel">Telefono</string>
    <string name="piatto">Piatto:</string>
    <string name="piattoo">Piatto</string>
    <string name="oraa">Ora:</string>
    <string name="ora">Ora</string>
    <string name="nome_piatto">Nome Piatto</string>
    <string name="portata">Portata</string>
    <string name="nomee">Nome:</string>
    <string name="nome">Nome</string>
    <string name="portataa">Portata:</string>
    <string name="tipoo">Tipo</string>
    <string name="prezzoo">Prezzo:</string>
    <string name="prezzo">Prezzo</string>
    <string name="take_away">Take Away</string>
    <string name="ordini">Ordini:</string>
    <string name="dati_p">Dati pagamento</string>
    <string name="app_name" translatable="false">Take Away</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="home" translatable="false">Home</string>
</resources>
