<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RistoratoreActivity"
    tools:showIn="@layout/activity_ristoratore"  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ristoratore"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cosa"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:onClick="lanciaVisualizzaMenu"
        android:text="@string/visualizza_menu" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:onClick="lanciaModificaMenu"
        android:text="@string/modifica_menu" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:onClick="lanciaVisualizzaComande"
        android:text="@string/visualizza_comande" />

</RelativeLayout>