<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/dati_p"/>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/numero_carta"
        android:layout_below="@id/toolbar"
        android:textSize="14sp"
        android:layout_marginStart="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nCarta"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp">

        <EditText
            android:id="@+id/nCartaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/_0000_0000_0000_0000"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/scadenza_carta"
        android:textSize="14sp"
        android:layout_marginStart="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/nCarta"
        android:layout_marginLeft="100dp"
        android:id="@+id/sCarta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp">

        <EditText
            android:id="@+id/sCartaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/mm_aaaa"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="31dp"
        android:text="@string/cvv"
        android:textSize="14sp"
        android:layout_marginStart="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/sCarta"
        android:layout_marginLeft="100dp"
        android:id="@+id/cvvCarta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp">

        <EditText
            android:id="@+id/cvvCartaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/n_cvv"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnPaga"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/paga"
        android:textSize="14sp" />
</RelativeLayout>