<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Seconda_Activity"
    tools:showIn="@layout/activity_seconda"    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chi_usa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="150dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ristoratore"
        android:onClick="lanciaRistoratoreAxctivity"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:onClick="lanciaClienteActivity"
        android:text="@string/cliente" />


</RelativeLayout>