<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/courgette"
            android:text="@string/inserisci_i_dati_del_piatto"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nomeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/nomeEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tipoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tipoEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/portata"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/prezzoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/prezzoEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prezzo"
                android:singleLine="true"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/salva"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>