<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/dati_p"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_below="@id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20sp"
        android:text="@string/grazie_per_averci_scelto"
        android:fontFamily="@font/courgette"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnh"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/home"
        android:textSize="14sp" />
</RelativeLayout>