<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    android:layout_height="wrap_content"
    android:id="@+id/mCard"
    android:clickable="true"
    android:focusable="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:padding="5dp"
            android:text="@string/nomee"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color1"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp" />

        <TextView
            android:id="@+id/nomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:padding="5dp"
            android:text="@string/nome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:padding="5dp"
            android:text="@string/portataa"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color1"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp" />

        <TextView
            android:id="@+id/tipoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nomeTxt"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:padding="5dp"
            android:text="@string/tipoo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:padding="5dp"
            android:text="@string/prezzoo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color1"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp" />

        <TextView
            android:id="@+id/prezzoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipoTxt"
            android:layout_marginLeft="70dp"
            android:padding="5dp"
            android:text="@string/prezzo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:layout_marginStart="70dp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>