<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_i_tuoi_dati"
            android:fontFamily="@font/courgette"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/nomeU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nomeEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cognomeU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cognomeEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cognome"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TelefonoU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefonoEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oraconsegnaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/oraconsegnaEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ora_consegna"
                android:inputType="time"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:text="@string/salva"
            android:background="@color/colorPrimary"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:focusable="true" />

    </LinearLayout>
</RelativeLayout>