<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_below="@id/toolbar"
        android:fontFamily="@font/courgette"
        android:text="@string/take_away"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textSize="42sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_below="@id/textView"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/chef" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/courgette"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/chi_usa"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:onClick="lanciaRistoratoreAxctivity"
        android:text="@string/ristoratore"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="5sp"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:onClick="lanciaClienteActivity"
        android:text="@string/cliente"
        android:textColor="@android:color/white" />
</RelativeLayout>