<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:paddingTop="55dp"
    android:layout_above="@id/textView"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="20sp"
        android:text="@string/riepilogo_ordine"
        android:fontFamily="@font/courgette"
        android:textSize="16sp"
        android:textColor="@color/color1" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/textView"
        android:id="@+id/recy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:onClick="Lanciapagaora"
        android:text="@string/paga_ora"
        android:background="@color/color1"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:onClick="lanciapagadopo"
        android:text="@string/paga_alla_consegna"
        android:background="@color/color1"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>